# electricitymaps-airflow-scheduler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: scheduled_workflow.py
src/electricitymaps_airflow_scheduler/: __init__.py  scheduler.py
src/electricitymaps_airflow_scheduler/lib/: electricitymaps.py
tests/: test_scheduler.py
